# facedetection

./: CMakeLists.txt  README.md  main.cpp
